finesse positions of connecting lines

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="dist/css/style.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
